# chord_detector

./: Cargo.toml  README.md
src/: chord_detector.rs  chromagram.rs  lib.rs
tests/: audio_detection.rs  generate_chords.py
